# sea-vision-project

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Pipfile  README.md  conanfile.txt  main.cpp  pipeline_cli.json  test_order_matters_1.json  test_order_matters_2.json  test_sharpen_order.json
checkpoint1/: main_step1.cpp  main_step2.cpp  main_step3.cpp  main_step4.cpp  main_step5.cpp
src/cpp/bindings/: operation_factory.cpp  operation_factory.hpp  pipeline_reader.cpp  pipeline_reader.hpp
src/cpp/bindings/cpp/: operation_factory.cpp  pipeline_reader.cpp
src/cpp/bindings/hpp/: operation_factory.hpp  pipeline_reader.hpp
src/cpp/operations/: base_operation.hpp  blur_operation.cpp  blur_operation.hpp  brightness_operation.cpp  brightness_operation.hpp  contrast_operation.cpp  contrast_operation.hpp  crop_operation.cpp  crop_operation.hpp  sharpen_operation.cpp  sharpen_operation.hpp
src/cpp/operations/cpp/: base_operation.cpp  operations.cpp
src/cpp/operations/hpp/: base_operation.hpp  operations.hpp
src/python/: main_cli.py
tests/json/: test_pipeline.json
